--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Web Based Porfolio</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<link href="style.css" type="text/css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id=header>
+      <h1>My Page</h1>
+			<div id="nav">
+				<ul>
+					<li><a href="https://trentklinge.github.io/bc_prog109_web_based_porfolio_home/">Home</a></li>
+					<li><a href="https://trentklinge.github.io/bc_prog109_web_based_porfolio_about/">About</a></li>
+					<li><a href="https://trentklinge.github.io/bc_prog109_web_based_porfolio_coursework/">Coursework</a></li>
+					<li><a href="https://trentklinge.github.io/bc_prog109_web_based_porfolio_artifacts/">Artifacts</a></li>
+					<li><a href="https://trentklinge.github.io/bc_prog109_web_based_porfolio_module_assignments/">Module Asignments</a></li>
+					<li><a href="https://trentklinge.github.io/bc_prog109_web_based_porfolio_contact_me/">Contact Me</a></li>
+					<li><a href="https://trentklinge.github.io/bc_prog109_web_based_porfolio_my_page/">My Page</a></li>
+				</ul>
+			</div>
+		</div>
