--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 		<h2>My Personal Interest</h2>
 		<p>Outside of school I am very interested in music. I play both piano and guitar although I have played piano for much longer. On each instrument I like to play different kinds of music. On piano I usually play classical music. Some of my favorite classical composers are Frédéric Chopin and Claude Debussy. On guitar I like to play Country and Folk music. Some of my favorite Country and folk artists are Bob Dylan, Willie Nelson, and Towns Van Zant.</p>
 		<ul>
-			<li><audio src="chopin.mp3" controls autoplay> <p>Chopin's Nocturne no.2</p></audio></li>
 			<li><img src="spongebob.gif" alt="gif of SpongeBob dancing to music with headphones on" /></li>
 			<li><a href="https://www.youtube.com/watch?v=i1qQOGCyRbY&t=61s" target="_blank"><img src="Debussy.jpg" alt="Album cover titled Debussy, Clair de Lune and other piano favorites, Arabesques, Reflets dans L'eau, Francois-Joel Thiollier. On it is an impressionist painting of a lake." /></a>
 				<p>Click to see video of Clair de Lune.(opens in new tab)</p>
 			</li>
 		</ul>
+		<audio src="chopin.mp3" controls autoplay> <p>Chopin's Nocturne no.2</p></audio>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/vWwgrjjIMXA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	  </div>
 	</body>
